[package]
name = "day_07"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { path = "../intcode" }
itertools = "^0.8.2"

[dependencies.futures]
version = "^0.3"
default_features = false
features = ["std", "executor"]
